// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Converters To immutable records entities to immutable records should converts basic entities correctly 1`] = `
Object {
  "Skill": Object {
    "1": Object {
      "id": 1,
      "power": 8,
      "target": 2,
    },
  },
  "User": Object {
    "2": Object {
      "friends": Array [
        3,
        4,
      ],
      "id": 2,
      "name": "Alan",
    },
    "3": Object {
      "friends": undefined,
      "id": 3,
      "name": "Antoine",
    },
    "4": Object {
      "friends": undefined,
      "id": 4,
      "name": "Joffrey",
    },
  },
}
`;

exports[`Converters To immutable records schema to immutable records should converts basic schema correctly 1`] = `
Object {
  "RootQueryType": Object {
    "skills": undefined,
    "user": undefined,
    "users": undefined,
  },
  "Skill": Object {
    "id": undefined,
    "power": undefined,
    "target": undefined,
  },
  "User": Object {
    "friends": undefined,
    "id": undefined,
    "name": undefined,
  },
}
`;

exports[`Converters To normalizr Schema to normalizr model should convert basic schema correctly 1`] = `
Object {
  "converters": Object {
    "skills": "Skill",
    "user": "User",
    "users": "User",
  },
  "entities": Object {
    "Skill": EntitySchema {
      "_getId": [Function],
      "_idAttribute": "id",
      "_key": "Skill",
      "_mergeStrategy": [Function],
      "_processStrategy": [Function],
      "schema": Object {
        "target": EntitySchema {
          "_getId": [Function],
          "_idAttribute": "id",
          "_key": "User",
          "_mergeStrategy": [Function],
          "_processStrategy": [Function],
          "schema": Object {
            "friends": Array [
              [Circular],
            ],
          },
        },
      },
    },
    "User": EntitySchema {
      "_getId": [Function],
      "_idAttribute": "id",
      "_key": "User",
      "_mergeStrategy": [Function],
      "_processStrategy": [Function],
      "schema": Object {
        "friends": Array [
          [Circular],
        ],
      },
    },
  },
}
`;

exports[`Converters To normalizr Schema to normalizr model should convert basic schema correctly 2`] = `
Object {
  "Skill": Array [
    Object {
      "id": "2",
    },
  ],
  "User": Array [
    Object {
      "id": "1",
    },
  ],
}
`;

exports[`Converters To normalizr Schema to normalizr model should convert basic schema correctly 3`] = `
Object {
  "User": Array [
    Object {
      "id": "2",
    },
  ],
}
`;
